Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DIVYANSH CHAWLA | Portfolio</title>
+    <title>DIVYANSH | Portfolio</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;700&family=Syncopate:wght@400;700&family=JetBrains+Mono&display=swap"
@@ -706,7 +706,7 @@
         >
           <div>
             <h3 style="font-family: &quot;Syncopate&quot;; margin-bottom: 20px">
-              DIVYANSH CHAWLA
+              DIVYANSH 
             </h3>
             <p style="color: var(--text-dim)">
               UI/UX Designer & Full-Stack Developer focused on building
@@ -758,7 +758,7 @@
             color: #666;
           "
         >
-          © 2026 Divyansh Chawla. Built with precision & intent.
+          © 2026 Divyansh. Built with precision & intent.
         </div>
       </footer>
     </div>
