--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       property="og:image"
       content="https://divyansh-29.github.io/portfolio/preview.png"
     />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" href="/portfolio/favicon.png" type="image/png"> 
+    <link rel="shortcut icon" href="/portfolio/favicon.png"> 
+    <link rel="apple-touch-icon" href="/portfolio/favicon.png">
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;700&family=Syncopate:wght@400;700&family=JetBrains+Mono&display=swap"
       rel="stylesheet"
@@ -1387,3 +1389,4 @@
     </script>
   </body>
 </html>
+
